Testing Gitlab CI

--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -1,3 +1,8 @@
-all:
+build:
 	icpc -DOUTPUT  -I../../testframework -I../../genera/blas  -I../../algorithm -qopenmp  main.cpp -mkl -lboost_program_options -lboost_serialization -o main.x
+
+clean:
+	rm *.x
+
+test: main.x
 	./main.x --n 3893 --mode "R" --opt "n" --name nacl --path_in ../../testframework/ --legacy on --nev 50 --bgn 1 --end 1 --nex 25
