--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,11 @@
 build_blas:
   stage: build
-  script: make clean build -C driver/blas/
+  script:
+  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
+  - make clean build -C driver/blas/
 
 test_blas:
   stage: test
-  script: make test -C driver/blas/
+  script:
+  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
+  - make test -C driver/blas/
