--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -1,9 +1,25 @@
-build:
-	icpc -DOUTPUT -std=c++11  -I../../testframework -I../../genera/blas  -I../../algorithm -qopenmp  main.cpp -mkl -lboost_program_options -lboost_serialization -o main.x
+BUILDDIR=../../build
+TESTPROBLEMDIR=~
+
+
+${BUILDDIR}/chase_blas.x: | mk_builddir
+	icpc -DOUTPUT -std=c++11 -qopenmp \
+	-I../../testframework -I../../genera/blas \
+	-I../../algorithm \
+	 main.cpp \
+	-mkl -lboost_program_options -lboost_serialization \
+	-o ${BUILDDIR}/chase_blas.x
+
+${BUILDDIR}/chase_blas.done: ${BUILDDIR}/chase_blas.x
+	${BUILDDIR}/chase_blas.x --n 3893 --mode "R" --opt "n" --name nacl --path_in ${TESTPROBLEMDIR}/ --legacy on --nev 50 --bgn 1 --end 1 --nex 25
+	touch ${BUILDDIR}/chase_blas.done
 
 clean:
-	rm -fr *.x
+	rm -fr ${BUILDDIR}/chase_blas.x
 
-test: main.x
-	ln -sf ~/gmat\ \ 1\ \ 1.bin ../../testframework/gmat\ \ 1\ \ 1.bin
-	./main.x --n 3893 --mode "R" --opt "n" --name nacl --path_in ../../testframework/ --legacy on --nev 50 --bgn 1 --end 1 --nex 25
+test: ${BUILDDIR}/chase_blas.done
+
+mk_builddir:
+	mkdir -p ${BUILDDIR}
+
+all: ${BUILDDIR}/chase_blas.x
