CI now reports the xml files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@ build_blas:
   artifacts:
     paths:
     - build/
-    - driver/blas/*.xml
 
 
 test_blas:
@@ -14,3 +13,6 @@ test_blas:
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
   - make test -C driver/blas/
+  artifacts:
+    paths:
+    - driver/blas/*.xml
