--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -3,7 +3,7 @@ TESTPROBLEMDIR=~
 
 
 ${BUILDDIR}/chase_blas.x: | mk_builddir
-	icpc -DOUTPUT -std=c++11 -qopenmp \
+	icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	-I../../testframework -I../../genera/blas \
 	-I../../algorithm \
 	 main.cpp \
@@ -11,11 +11,12 @@ ${BUILDDIR}/chase_blas.x: | mk_builddir
 	-o ${BUILDDIR}/chase_blas.x
 
 ${BUILDDIR}/chase_blas.done: ${BUILDDIR}/chase_blas.x
+	${BUILDDIR}/chase_blas.x --n 3893 --mode "R" --opt "S" --name nacl --path_in ${TESTPROBLEMDIR}/ --legacy on --nev 50 --bgn 1 --end 1 --nex 25
 	${BUILDDIR}/chase_blas.x --n 3893 --mode "R" --opt "n" --name nacl --path_in ${TESTPROBLEMDIR}/ --legacy on --nev 50 --bgn 1 --end 1 --nex 25
 	touch ${BUILDDIR}/chase_blas.done
 
 clean:
-	rm -fr ${BUILDDIR}/chase_blas.x
+	rm -fr ${BUILDDIR}/chase_blas.x ${BUILDDIR}/chase_blas.done
 
 test: ${BUILDDIR}/chase_blas.done
 
