Basic MPI Support, Bug in Lanczos
- Basic MPI support for Exciton code. Note: while MPI is supported there is no
  work-sharing. Required HDF5
  On lambda: module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5/1.8.17
- Fixed a bug in lanczos where each process used the same vector
- fixed some formatting, now .clang-format is included

--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -9,10 +9,12 @@ ${BUILDDIR}/chase_blas.x: | mk_builddir
 	  main.cpp \
 	  -mkl -lboost_program_options -lboost_serialization \
 	  -o ${BUILDDIR}/chase_blas.x
+	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5.o
 	icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	  -I../../genera/blas  -I../../algorithm \
 	  lib.cpp \
 	  -c -o ${BUILDDIR}/chase_blas.o
+	ar rvs ${BUILDDIR}/libchase.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_blas.o
 
 ${BUILDDIR}/chase_blas.done: ${BUILDDIR}/chase_blas.x
 	${BUILDDIR}/chase_blas.x --n 3893 --mode "R" --opt "S" --name nacl   \
