NOT FOR PRODUCTION
initial versionof MPI genus
There are still a number of todos, locking and so on.

--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -9,8 +9,10 @@ ${BUILDDIR}/chase_blas.x: | mk_builddir
 	  main.cpp \
 	  -mkl -lboost_program_options -lboost_serialization \
 	  -o ${BUILDDIR}/chase_blas.x
+
+${BUILDDIR}/libchase.a
 	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5.o
-	icpc -DOUTPUT -std=c++11 -qopenmp -g \
+	mpicxx -cxx=icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	  -I../../genera/blas  -I../../algorithm \
 	  lib.cpp \
 	  -c -o ${BUILDDIR}/chase_blas.o
