--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,14 @@ build_blas:
     paths:
     - build/
 
+build_mpi:
+  stage: build
+  script:
+  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
+  - make clean build -C driver/mpi/
+  artifacts:
+    paths:
+    - build/
 
 test_blas:
   stage: test
@@ -16,3 +24,12 @@ test_blas:
   artifacts:
     paths:
     - driver/blas/*.xml
+
+test_blas:
+  stage: test
+  script:
+  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
+  - make test -C driver/mpi/
+  artifacts:
+    paths:
+    - driver/mpi/*.xml
