Overhaul of Makefiles

--- a/driver/blas/Makefile
+++ b/driver/blas/Makefile
@@ -1,8 +1,22 @@
 BUILDDIR=../../build
 TESTPROBLEMDIR=~
+GENUS=blas
 
+.PHONY: lib clean test mk_builddir
 
-${BUILDDIR}/chase_blas.x: | mk_builddir
+lib: ${BUILDDIR}/libchase_${GENUS}.a
+
+clean:
+	rm -fr ${BUILDDIR}/chase_${GENUS}.x ${BUILDDIR}/chase_${GENUS}.done
+
+test: ${BUILDDIR}/chase_${GENUS}.done
+
+mk_builddir:
+	mkdir -p ${BUILDDIR}
+
+build: ${BUILDDIR}/chase_${GENUS}.x
+
+${BUILDDIR}/chase_${GENUS}.x: | mk_builddir
 	icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	  -I../../testframework -I../../genera/blas \
 	  -I../../algorithm \
@@ -10,13 +24,13 @@ ${BUILDDIR}/chase_blas.x: | mk_builddir
 	  -mkl -lboost_program_options -lboost_serialization \
 	  -o ${BUILDDIR}/chase_blas.x
 
-${BUILDDIR}/libchase.a:
+${BUILDDIR}/libchase_${GENUS}.a: mk_builddir
 	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5.o
-	mpicxx -cxx=icpc -DOUTPUT -std=c++11 -qopenmp -g \
-	  -I../../genera/blas  -I../../algorithm \
+	mpicxx -DOUTPUT -std=c++11 -fopenmp -g \
+	  -I../../genera/${GENUS}  -I../../algorithm \
 	  lib.cpp \
-	  -c -o ${BUILDDIR}/chase_blas.o
-	ar rvs ${BUILDDIR}/libchase.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_blas.o
+	  -c -o ${BUILDDIR}/chase_${GENUS}.o
+	ar rvs ${BUILDDIR}/libchase_${GENUS}.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_${GENUS}.o
 
 ${BUILDDIR}/chase_blas.done: ${BUILDDIR}/chase_blas.x
 	${BUILDDIR}/chase_blas.x --n 3893 --mode "R" --opt "S" --name nacl   \
@@ -27,12 +41,30 @@ ${BUILDDIR}/chase_blas.done: ${BUILDDIR}/chase_blas.x
 	  --nex 50
 	touch ${BUILDDIR}/chase_blas.done
 
-clean:
-	rm -fr ${BUILDDIR}/chase_blas.x ${BUILDDIR}/chase_blas.done
 
-test: ${BUILDDIR}/chase_blas.done
+# ${BUILDDIR}/chase_blas.x: | mk_builddir
+# 	icpc -DOUTPUT -std=c++11 -qopenmp -g \
+# 	  -I../../testframework -I../../genera/blas \
+# 	  -I../../algorithm \
+# 	  main.cpp \
+# 	  -mkl -lboost_program_options -lboost_serialization \
+# 	  -o ${BUILDDIR}/chase_blas.x
 
-mk_builddir:
-	mkdir -p ${BUILDDIR}
+# ${BUILDDIR}/libchase_blas.a:
+# 	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5.o
+# 	mpicxx -cxx=icpc -DOUTPUT -std=c++11 -qopenmp -g \
+# 	  -I../../genera/blas  -I../../algorithm \
+# 	  lib.cpp \
+# 	  -c -o ${BUILDDIR}/chase_blas.o
+# 	ar rvs ${BUILDDIR}/libchase_blas.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_blas.o
 
-build: ${BUILDDIR}/chase_blas.x
+
+# clean:
+# 	rm -fr ${BUILDDIR}/chase_blas.x ${BUILDDIR}/chase_blas.done
+
+# test: ${BUILDDIR}/chase_blas.done
+
+# mk_builddir:
+# 	mkdir -p ${BUILDDIR}
+
+# build: ${BUILDDIR}/chase_blas.x
