--- a/driver/mpi/Makefile
+++ b/driver/mpi/Makefile
@@ -7,30 +7,33 @@ GENUS=mpi
 lib: ${BUILDDIR}/libchase_${GENUS}.a
 
 clean:
-	rm -fr ${BUILDDIR}/chase_${GENUS}.x ${BUILDDIR}/chase_${GENUS}.done
+	:
 
 test: ${BUILDDIR}/chase_${GENUS}.done
 
 mk_builddir:
 	mkdir -p ${BUILDDIR}
 
-build: ${BUILDDIR}/chase_${GENUS}.x
+build: | ${BUILDDIR}/chase_${GENUS}.x
 
-${BUILDDIR}/chase_${GENUS}.x: | mk_builddir
+${BUILDDIR}/chase_${GENUS}.x: mk_builddir
+	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5_${GENUS}.o
 	mpicxx -cxx=icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	  -I../../testframework -I../../genera/${GENUS} \
 	  -I../../algorithm \
-	  main.cpp \
-	  -mkl -lboost_program_options -lboost_serialization \
+	  main.cpp -c -o ${BUILDDIR}/main_${GENUS}.o
+	h5pcc -qopenmp -g \
+	  ${BUILDDIR}/main_${GENUS}.o ${BUILDDIR}/hdf5_${GENUS}.o \
+	  -mkl -lboost_program_options -lboost_serialization -lstdc++ \
 	  -o ${BUILDDIR}/chase_${GENUS}.x
 
 ${BUILDDIR}/libchase_${GENUS}.a: mk_builddir
-	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5.o
-	mpicxx -DOUTPUT -std=c++11 -fopenmp -g \
+	h5pcc -g -c hdf5.c -o ${BUILDDIR}/hdf5_${GENUS}.o
+	mpicxx -cxx=icpc -DOUTPUT -std=c++11 -qopenmp -g \
 	  -I../../genera/${GENUS}  -I../../algorithm \
-	  lib.cpp \
-	  -c -o ${BUILDDIR}/chase_${GENUS}.o
-	ar rvs ${BUILDDIR}/libchase_${GENUS}.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_${GENUS}.o
+	  lib.cpp  -c -o ${BUILDDIR}/chase_${GENUS}.o
+	  ar rvs ${BUILDDIR}/libchase_${GENUS}.a ${BUILDDIR}/hdf5.o ${BUILDDIR}/chase_${GENUS}.o
+
 
 ${BUILDDIR}/chase_${GENUS}.done: ${BUILDDIR}/chase_${GENUS}.x
 	mpirun -np 1 ${BUILDDIR}/chase_mpi.x --n 3893 --mode "R" --opt "S" --name nacl   \
