--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,11 +25,11 @@ test_blas:
     paths:
     - driver/blas/*.xml
 
-test_mpi:
-  stage: test
-  script:
-  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
-  - make test -C driver/mpi/
-  artifacts:
-    paths:
-    - driver/mpi/*.xml
+# test_mpi:
+#   stage: test
+#   script:
+#   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
+#   - make test -C driver/mpi/
+#   artifacts:
+#     paths:
+#     - driver/mpi/*.xml
