--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 # -*- Mode: cmake -*-
-# Specify the minimum version for CMake
 
+# Specify the minimum version for CMake
 cmake_minimum_required( VERSION 3.7 )
+
 enable_testing()
 
+
+set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Debug)
 # Project's name
 
 project( ChASE )
@@ -18,13 +22,11 @@ set( CMAKE_CXX_STANDARD 11 )
 add_definitions( "-DOUTPUT" )
 
 # Set the output folder where your program will be created
-set( CMAKE_BINARY_DIR       ${CMAKE_SOURCE_DIR}/build/ )
+#set( CMAKE_BINARY_DIR       ${CMAKE_SOURCE_DIR} )
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR} )
 set( LIBRARY_OUTPUT_PATH    ${CMAKE_BINARY_DIR} )
 
-include_directories("${PROJECT_SOURCE_DIR}/algorithm")
-include_directories("${PROJECT_SOURCE_DIR}/genera/blas")
-include_directories("${PROJECT_SOURCE_DIR}/testframework")
+include_directories("${PROJECT_SOURCE_DIR}")
 
 # underscores for FORTRAN
 enable_language( Fortran )
@@ -40,20 +42,21 @@ find_package( BLAS   REQUIRED )
 find_package( LAPACK REQUIRED )
 
 # ## OPENMP ##
-find_package( OpenMP REQUIRED )
-if( OPENMP_FOUND )
-  set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
-  set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
-endif()
+# find_package( OpenMP REQUIRED )
+# if( OPENMP_FOUND )
+#   set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
+#   set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
+# endif()
 
 
 # ## BOOST ##
 # TODO: do not make required, just don't build driver
 find_package( Boost COMPONENTS serialization program_options )
 find_package( MPI  REQUIRED)
-if( OPENMP_FOUND )
+if( MPI_FOUND )
   set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_COMPILE_FLAGS}" )
   set( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${MPI_CXX_COMPILE_FLAGS}" )
+  add_definitions( "-DHAS_MPI=1" )
 endif()
 
 find_package( CUDA )
@@ -156,20 +159,20 @@ endif()
 
 ## MPI+BLAS implementation ##
 if( MPI_FOUND )
-  set( LIB_NAME "mpi_lib" )
+#  set( LIB_NAME "mpi_lib" )
   set( DRIVER_NAME "mpi_driver" )
 
-  add_library(${LIB_NAME} STATIC driver/blas/lib.cpp )
-  target_link_libraries( ${LIB_NAME}
-    ${BLAS_LIBRARIES}
-    ${LAPACK_LIBRARIES}
-    ${MPI_CXX_LIBRARIES}
-    )
-  target_compile_definitions( ${LIB_NAME} PUBLIC
-    MATRIX_FREE_IMPLEMENTATION=MATRIX_FREE_IMPLEMENTATION_MPI_BLAS
-    HAS_MPI=1
-    )
-  target_include_directories( ${LIB_NAME} PRIVATE ${MPI_CXX_INCLUDE_PATH} )
+  # add_library(${LIB_NAME} STATIC driver/blas/lib.cpp )
+  # target_link_libraries( ${LIB_NAME}
+  #   ${BLAS_LIBRARIES}
+  #   ${LAPACK_LIBRARIES}
+  #   ${MPI_CXX_LIBRARIES}
+  #   )
+  # target_compile_definitions( ${LIB_NAME} PUBLIC
+  #   MATRIX_FREE_IMPLEMENTATION=MATRIX_FREE_IMPLEMENTATION_MPI_BLAS
+  #   HAS_MPI=1
+  #   )
+  # target_include_directories( ${LIB_NAME} PRIVATE ${MPI_CXX_INCLUDE_PATH} )
 
   if( Boost_FOUND )
     add_executable( ${DRIVER_NAME} driver/blas/main.cpp )
@@ -204,5 +207,22 @@ if( CUDA_FOUND AND MPI_FOUND )
       MATRIX_FREE_IMPLEMENTATION=MATRIX_FREE_IMPLEMENTATION_MPI_CUDA
       )
     cuda_add_cublas_to_target( ${DRIVER_NAME} )
+  endif()
 endif()
+
+
+
+find_package(Elemental)
+SET( DRIVER_NAME "elemental_driver")
+add_executable(${DRIVER_NAME}  driver/elemental/main.cpp )
+target_link_libraries( ${DRIVER_NAME}
+  ${Elemental_LIBRARIES}
+  )
+target_compile_definitions(${DRIVER_NAME} PUBLIC ${Elemental_DEFINITIONS} HAS_ELEMENTAL=1 HAS_MPI=1 
+#_GLIBCXX_USE_CXX11_ABI=1
+)
+target_include_directories(${DRIVER_NAME} PUBLIC ${Elemental_INCLUDE_DIRS})
+if(Elemental_LINK_FLAGS)
+  set_target_properties(${DRIVER_NAME}
+    PROPERTIES LINK_FLAGS ${Elemental_LINK_FLAGS})
 endif()
