--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,11 @@ find_package( LAPACK REQUIRED )
 find_package( Boost COMPONENTS serialization program_options )
 find_package( MPI  REQUIRED)
 if( MPI_FOUND )
-  set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_COMPILE_FLAGS}" )
-  set( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${MPI_CXX_COMPILE_FLAGS}" )
+  # set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_COMPILE_FLAGS}" )
+  # set( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${MPI_CXX_COMPILE_FLAGS}" )
   add_definitions( "-DHAS_MPI=1" )
+  set(CMAKE_C_COMPILER ${MPI_C_COMPILER})
+  set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
 endif()
 
 find_package( CUDA )
